# OpenXR-SDK

./: .appveyor.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  BUILDING.md  CHANGELOG.SDK.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING.adoc  README.md  checkCodespell  openxr-codespell.exclude  runClangFormat.sh
.azure-pipelines/: build_jobs.yml  build_linux.yml  build_mingw.yml  build_msvc.yml  check_clang_format.yml  codespell.yml  generate_windows_matrix_build.py  install_vulkan.ps1  openxr-sdk-source.yml  openxr-sdk.yml  organize_windows_artifacts.py  print_windows_artifact_names.py  shared.py
.azure-pipelines/nuget/: stage_nuget.ps1
.azure-pipelines/nuget/NugetTemplate/: OpenXR.Loader.nuspec
.azure-pipelines/shared/: build_jobs.yml  build_linux.yml  build_mingw.yml  build_msvc.yml  check_clang_format.yml  check_file_format.yml  codespell.yml  generate_windows_matrix_build.py  install_vulkan.ps1  organize_windows_artifacts.py  print_windows_artifact_names.py  shared.py
.github/: pull_request_template.md
.github/scripts/: CMakePresets.json  generate_windows_matrix_build.py  install_vulkan.ps1  organize_windows_artifacts.py  shared.py
.github/workflows/: OpenXR-SDK-readonly.yml  android.yml  check_clang_format_and_codespell.yml  gradle-wrapper-validation.yml  msvc-build-preset.yml  windows-matrix.yml
.reuse/: dep5
LICENSES/: LicenseRef-KhronosSpecCopyright-WithNormativeWording-v10.txt  LicenseRef-KhronosSpecCopyright.txt
doc/loader/: OpenXR_loader_design.html
include/: CMakeLists.txt  generated_header_list.txt.license
include/openxr/: CMakeLists.txt  openxr.h  openxr.hpp  openxr_platform.h  openxr_platform_defines.h  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
specification/: .gitignore
specification/registry/: xr.xml
specification/scripts/: cgenerator.py  check_spec_links.py  conventions.py  docgenerator.py  extDependency.py  extensionStubSource.py  extensionmetadocgenerator.py  extract_code.py  genRef.py  generator.py  genxr.py  hostsyncgenerator.py  pygenerator.py  realign.py  reflib.py  reflow.py  reflow_count.py  reg.py  test_check_spec_links.py  test_check_spec_links_api_specific.py  test_entity_db.py  update_version.py  validitygenerator.py  xrconventions.py
src/: .clang-format  CMakeLists.txt  common_cmake_config.h.in  common_config.h.in  version.cmake  xr_generated_dispatch_table.c  xr_generated_dispatch_table.h  xr_generated_dispatch_table_core.c  xr_generated_dispatch_table_core.h  xr_generated_utilities.c  xr_generated_utilities.h
src/api_layers/: CMakeLists.txt  README.md  README_api_dump.md  README_core_validation.md  XrApiLayer_api_dump.def  XrApiLayer_core_validation.def  api_dump.cpp  api_layer_platform_defines.h  core_validation.cpp  validation_utils.h
src/cmake/: FindVulkanHeaders.cmake  StdFilesystemFlags.cmake  fxc_shader.cmake  glsl_shader.cmake  make_includable.cmake  metaconfig.cmake.in  presentation.cmake
src/common/: extra_algorithms.h  filesystem_utils.cpp  filesystem_utils.hpp  gfxwrapper_opengl.c  gfxwrapper_opengl.h  hex_and_handles.cpp  hex_and_handles.h  loader_interfaces.h  object_info.cpp  object_info.h  platform_utils.hpp  xr_dependencies.h  xr_linear.h  xr_utils.h
src/loader/: .gitignore  AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt  OpenXRConfig.cmake.in  abi.json  additional_manifest.mf.in.license  android_utilities.cpp  android_utilities.h  api_layer_interface.cpp  api_layer_interface.hpp  build.gradle  exception_handling.hpp  gradlew  gradlew.bat  loader.rc  loader_core.cpp  loader_init_data.cpp  loader_init_data.hpp  loader_instance.cpp  loader_instance.hpp  loader_logger.cpp  loader_logger.hpp  loader_logger_recorders.cpp  loader_logger_recorders.hpp  loader_platform.hpp  manifest_file.cpp  manifest_file.hpp  module.json.license  openxr-loader.def  openxr-loader.expsym  openxr-loader.map  openxr-loader.map.license  openxr.pc.in  openxr.pc.in.license  openxr_loader_for_android.pom  runtime_interface.cpp  runtime_interface.hpp  settings.gradle  xr_generated_loader.cpp  (+1 more)
src/loader/gradle/wrapper/: gradle-wrapper.jar.license  gradle-wrapper.properties.license
src/scripts/: .gitignore  api_dump_generator.py  automatic_source_generator.py  generate_api_layer_manifest.py  generate_runtime_manifest.py  loader_source_generator.py  src_genxr.py  utility_source_generator.py  validation_layer_generator.py
src/tests/: CMakeLists.txt
src/tests/hello_xr/: CMakeLists.txt  check.h  common.h  geometry.h  graphicsapi.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_factory.cpp  graphicsplugin_opengl.cpp  graphicsplugin_vulkan.cpp  logger.cpp  logger.h  main.cpp  openxr_program.cpp  openxr_program.h  options.h  pch.h  platformplugin.h  platformplugin_factory.cpp  platformplugin_win32.cpp  platformplugin_xlib.cpp
src/tests/hello_xr/vulkan_shaders/: frag.glsl  frag.spv  vert.glsl  vert.spv
src/tests/list/: CMakeLists.txt  list.cpp
src/tests/loader_test/: CMakeLists.txt  loader_test.cpp  loader_test_utils.cpp  loader_test_utils.hpp
src/tests/loader_test/test_layers/: CMakeLists.txt  XrApiLayer_test.def  layer_test.cpp
src/tests/loader_test/test_runtimes/: CMakeLists.txt  runtime_test.cpp  test_runtime.def
